adding some basic routings

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,16 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+button{
+  padding: 20px;
+  border: 2px solid green;
+  font-size: 30px;
 
+
+}
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
